Fix offset of header on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,7 +29,7 @@
 }
 
 header {
-    transition-property: margin;
+    transition-property: margin padding;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
     margin: 0 0 40px;
@@ -45,7 +45,8 @@ header {
 
 @media only screen and (max-width : 480px) {
     header {
-        margin: 20px 0;
+        padding-top: 30px;
+        margin: 0 0 20px;
     }
 }
 
